--- a/styles/cOcLarge.css
+++ b/styles/cOcLarge.css
@@ -8,6 +8,48 @@
         justify-content: space-around;
     }
 
+    ul.filterMenuLinks, ul.filterMenuLinks.open {
+        display: flex;
+        justify-content: space-around;
+    }
+
+
+    .flexbox-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        padding: 1rem;
+        gap: 1rem
+        /* grid-template-rows: 1fr 1fr; */
+    }
+
+    main {
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+    #courseWork {
+        grid-column: 1/3;
+        
+    } 
+    .flexbox-item {
+        width: 100%;
+        margin: 0;
+    }
+
+    #location {
+        grid-column: 3/4;
+    }
+
+    #cert {
+        grid-column: 1/4;
+    }
+
+    #courseList {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 1rem;
+
+
+    }
     /* ul.menuLinks a:hover {
         background-color: #021859;
     } */
@@ -17,8 +59,11 @@
         flex-wrap: wrap;
     }  */
 
-    ul.filterMenuLinks, ul.filterMenuLinks.open {
-        display: flex;
-        justify-content: space-around;
-    }
+
+
+
+
+
+
+
 }
