--- a/chamber/styles/directoryBase.css
+++ b/chamber/styles/directoryBase.css
@@ -1,10 +1,82 @@
 body {
-    font-family: "Mountains of Christmas", serif;
-    
+    font-family: "Mountains of Christmas", serif;   
 }
 
 header {
-    font-size: 1.25rem;
+    font-size: .75rem;
+    background-color: #056CF2;
+    color: white;
+    text-align: center;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    font-family: "Walter Turncoat", cursive;
+}
+
+/* This is for the hamburger  icon */
+#myButton::before {
+    content: "\2630";
+    color: rgb(15, 14, 14);   
+}
+/* The actual icon */
+#myButton {
+    font-size: 2rem;
+    background: none;
+    border: none;
+    color: black;
+    cursor: pointer;
+    width: 44px;
+    text-align: right;
+    padding: .25rem 2vw;
+    position: absolute;
+    top: 0;
+    right: 2vw;
+}
+ul.menuLinks li a {
+    display: block;
+    padding: .75rem 2vw;
+    color: rgb(253, 253, 253);
+    font-size: 1.5rem;
+    font-weight: 400;
+    text-decoration: none;
+}
+li.currrent-menu-item a {
+    background-color: black;
+} 
+ul.menuLinks {
+    display: none;
+    list-style-type: none; 
+}
+#myButton.open::before {
+    content: "x";
+    color: rgb(7, 7, 7);
+}
+ul.menuLinks.open {
+    display: block;
+} 
+
+/* This is for nav */
+nav {
+    font-family: "Walter Turncoat", cursive;
+    font-weight: 300;
+    background-color: #056CF2;
+}
+.menulinks {
+    touch-action: auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+footer {
+    font-size: .75rem;
     background-color: #056CF2;
     color: white;
     text-align: center;
@@ -12,10 +84,4 @@ header {
     padding-bottom: 1px;
     font-weight: 500;
     font-family: "Walter Turncoat", cursive;
-}
-
-nav {
-    font-family: "Walter Turncoat", cursive;
-    font-weight: 400;
-    background-color: #056CF2;
 }
