--- a/chamber/styles/directoryBase.css
+++ b/chamber/styles/directoryBase.css
@@ -2,6 +2,13 @@ body {
     font-family: "Mountains of Christmas", serif;   
 }
 
+.logo {
+    mix-blend-mode: multiply;
+    max-width: 90%;
+    height: auto;
+    padding-top: 1.25rem;
+}
+
 header {
     font-size: .75rem;
     background-color: #056CF2;
@@ -9,7 +16,19 @@ header {
     text-align: center;
     padding-top: 1px;
     padding-bottom: 1px;
+    display: grid;
+    grid-template-columns: 65px 1fr;
+    text-align: left;
     font-family: "Walter Turncoat", cursive;
+}
+
+header h1 {
+    text-align: left;
+    padding-left: 1rem;
+}
+
+header h2 {
+    font-size: .75rem;
 }
 
 /* This is for the hamburger  icon */
@@ -64,24 +83,86 @@ nav {
     touch-action: auto;
 }
 
+/* This is my events and weather section */
+.event, .weather, .forcast {
+    text-align: center;
+    background-color: #056CF2;
+    color: white;
+}
+.event h3, .weather h3, .forcast h3 {
+    margin: 0 auto;
+}
+
+#event p, #weather p, #forcast p {
+    margin: 0 auto;
+    background-color: rgb(223, 211, 211);
+    margin-bottom: 10px;
+}
+
+/* Hero Image */
+.heroImg {
+    width: 90%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* This is for Buisness Cards */
+.businessCard1 {
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px gray;
+    max-width: 320px;
+    padding: 10px;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.cardHeader1 {
+    display: flex;
+    align-items: center;
+}
+
+.profileImg1 {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.contactInfo1 p {
+    font-size: 1em;
+    color: #555;
+    text-align: justify;
+}
+
+.contactInfo1 h3 {
+    border-bottom: solid black;
+}
+#grinch {
+    text-align: left;
+    padding-left: 30px;
+}
 
 
-
-
-
-
-
-
-
-
-
+/* This is the footer */
 footer {
+    padding-left: 1rem;
     font-size: .75rem;
     background-color: #056CF2;
     color: white;
-    text-align: center;
     padding-top: 1px;
     padding-bottom: 1px;
     font-weight: 500;
     font-family: "Walter Turncoat", cursive;
+}
+
+footer .social img {
+    padding-left: 2rem;
+    width: 8%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
