--- a/chamber/styles/directoryLarge.css
+++ b/chamber/styles/directoryLarge.css
@@ -1,9 +1,11 @@
 @media only screen and (min-width: 38rem) {
     
     .logo {
-        mix-blend-mode: multiply;
-        max-width: 10rem;
+        mix-blend-mode: multiply; 
+        max-width: 100%;
         height: auto;
+        padding-top: .5rem;
+        padding-left: .5rem;
     }
 
    
