--- a/chamber/styles/directoryLarge.css
+++ b/chamber/styles/directoryLarge.css
@@ -26,6 +26,10 @@
         text-align: center;
     }
     /* This is for nav */
+    .active {
+        background-color: #3655b3;
+        border-radius: 50%;
+    }
     #myButton {
         display: none;
     }
