--- a/chamber/styles/directoryBase.css
+++ b/chamber/styles/directoryBase.css
@@ -21,7 +21,7 @@ header {
     display: grid;
     grid-template-columns: 65px 1fr;
     text-align: left;
-    /* font-family: "Walter Turncoat", cursive; */
+    font-family: "Walter Turncoat", cursive;
 }
 
 header h1 {
@@ -81,7 +81,7 @@ ul.menuLinks.open {
 
 /* This is for nav */
 nav {
-    /* font-family: "Walter Turncoat", cursive; */
+    font-family: "Walter Turncoat", cursive;
     font-weight: 300;
     background-color: #056CF2;
 }
@@ -181,7 +181,7 @@ footer {
     padding-top: 1px;
     padding-bottom: 1px;
     font-weight: 500;
-    /* font-family: "Walter Turncoat", cursive; */
+    font-family: "Walter Turncoat", cursive;
 }
 
 #footerTitle p {
