--- a/chamber/styles/directoryBase.css
+++ b/chamber/styles/directoryBase.css
@@ -1,8 +1,3 @@
-
-/* body {
-    font-family: "Mountains of Christmas", serif;   
-} */
-
 .logo {
     mix-blend-mode: multiply; 
     max-width: 50%;
@@ -22,7 +17,6 @@ header {
     display: grid;
     grid-template-columns: 65px 1fr;
     text-align: left;
-    /* font-family: "Walter Turncoat", cursive; */
 }
 
 header h1 {
@@ -38,12 +32,17 @@ header h2 {
     margin: 0 auto;;
 }
 
-/* This is for the hamburger  icon */
+/* ********************************
+This is for the hamburger  icon
+******************************** */
 #myButton::before {
     content: "\2630";
     color: rgb(15, 14, 14);   
 }
-/* The actual icon */
+/* 
+***********************
+The actual icon 
+************************/
 #myButton {
     font-size: 2rem;
     background: none;
@@ -80,9 +79,11 @@ ul.menuLinks.open {
     display: block;
 } 
 
-/* This is for nav */
+/* 
+*****************
+This is for nav 
+*****************/
 nav {
-    /* font-family: "Walter Turncoat", cursive; */
     font-weight: 300;
     background-color: #056CF2;
 }
@@ -103,7 +104,12 @@ main h2 {
     margin-bottom: 1rem;
     text-align: center;
 }
-/* This is my events and weather section */
+
+
+/* 
+******************************************
+This is my events and weather section 
+******************************************/
 .event, .weather, .forcast {
     text-align: center;
     background-color: #056CF2;
@@ -125,7 +131,6 @@ main h2 {
     margin: 0 auto;
 }
 
-/* Hero Image */
 .heroImg {
     width: 90%;
     height: auto;
@@ -134,7 +139,10 @@ main h2 {
     margin-right: auto;
 }
 
-/* This is for Buisness Cards */
+/* 
+******************************
+This is for Buisness Cards 
+*******************************/
 .businessCard1 {
     background-color: white;
     border-radius: 10px;
@@ -173,16 +181,17 @@ main h2 {
 }
 
 
-/* This is the footer */
+/*
+************************
+ This is the footer 
+ **********************/
 footer {
     padding-left: 1rem;
     font-size: .75rem;
     background-color: #056CF2;
     color: white;
-    padding-top: 1px;
     padding-bottom: 1px;
     font-weight: 500;
-    /* font-family: "Walter Turncoat", cursive; */
 }
 
 #footerTitle p {
@@ -200,7 +209,12 @@ footer .social img {
     margin-left: auto;
     margin-right: auto;
 }
-/* Call to action button */
+
+
+/*
+*****************************
+ Call to action button 
+ ****************************/
 .ctaButton {
     background-color: #ff6b6b; 
     color: white; 
@@ -214,4 +228,47 @@ footer .social img {
 
 .ctaButton:hover {
     background-color: #ff3b3b; /* Darken background on hover */
+}
+
+
+/*
+*****************************
+ JOIN html 
+ ****************************/
+#membership-form, #membership-level {
+    font-size: 1.25rem;
+    text-align: center;
+    padding-top: .5rem;
+}
+#membership-level {
+    font-size: 1.25rem;
+    text-align: center;
+    padding-top: .5rem;
+    margin-top: 1rem;
+}
+
+.formContainer h4 {
+    margin: 0 auto;
+    padding-top: .75rem;
+    text-align: left;
+}
+
+.formContainer input, .formContainer textarea {
+    background-color: #056CF2;
+    max-width: 320px;
+    width: 100%;
+    color:white;
+    box-shadow: 0 4px 10px black;
+}
+
+.formContainer ::placeholder{
+    color: white;
+}
+
+.membership-levels div {
+    margin-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+    background-color: tan;
+    border-bottom-right-radius: 1rem;
 }
