--- a/chamber/styles/directoryBase.css
+++ b/chamber/styles/directoryBase.css
@@ -1,3 +1,21 @@
+@media only screen and (max-width: 600px) {
+header {
+    display: grid;
+    grid-template-columns: 65px 1fr;
+}
+
+figure {
+    margin: 0 auto;
+}
+
+.label {
+    font-weight: 600;
+}
+}
+img {
+    max-width: 320px;
+}
+
 .logo {
     mix-blend-mode: multiply; 
     max-width: 50%;
@@ -14,8 +32,8 @@ header {
     text-align: center;
     padding-top: 1px;
     padding-bottom: 1px;
-    display: grid;
-    grid-template-columns: 65px 1fr;
+    /* display: grid;
+    grid-template-columns: 65px 1fr; */
     text-align: left;
 }
 
@@ -282,21 +300,54 @@ footer .social img {
 /* *************
 Discover Page
 ************* */
-/* Basic styling for the sidebar
+#disc {
+    text-align: center;
+    margin-top: .75rem;
+    margin-bottom: .75rem;
+}
+
+.demo, .stats, .attractions {
+    margin-left: 2rem;
+    border: 2px solid black;
+    box-shadow: 0 4px 8px black;
+    margin-bottom: 1.5rem;
+    border-radius: 10px;
+    background-color: aliceblue;
+}
+
+.demo p, .stats p, .attractions p {
+    margin: 5px auto;
+    margin-left: 10px;
+}
+
+
+.demo h3, .stats h3, .attractions h3 {
+    margin-bottom: 8px;
+    margin-top: 5px;
+    text-align: center;
+
+}
+/* Basic styling for the sidebar */
 #sidebar {
     width: 300px;
     padding: 20px;
     background-color: #f0f0f0;
     border: 1px solid #ccc;
     position: fixed;
-    top: 20px;
-    right: 20px;
+    top: 55px;
+    right: 80px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
+    padding: 2px;
 }
 
+/* *****************************
 Styling for the visit message
+***************************** */
 #visit-message {
-    font-size: 1.2em;
+    font-size: 1em;
     color: #333;
-} */
+}
+
+
+
