--- a/chamber/styles/directoryLarge.css
+++ b/chamber/styles/directoryLarge.css
@@ -17,7 +17,34 @@
         margin-left: 1.5rem;
     }
 
-  
+    #ctaButton {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 10px 20px;
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+
+
+
+
+
+  /* ***********************
+  Home page
+  *********************** */
+    .heroImg {
+        max-width: 100%;
+    }
+
+    #homePage {
+        margin-left: 2.5rem;   
+    }
 
     main h2 {
         font-size: 2rem;
@@ -164,14 +191,31 @@
         font-weight: 600;
     }
 
-
-
-
-    .container {
+    #discover {
         display: grid;
-        grid-template-rows: 1fr 1fr 1fr;
-        grid-template-columns: 20rem 1fr;
-        /* grid-template-rows: 1fr 1fr 1fr; */
+        
     }
+
+    #discover h2 {
+        grid-column: 1/3;
+    }
+
+    .images {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    img {
+        border-radius: 25px;
+    }
+
+    figcaption {
+        text-align: center;
+        margin-bottom: 2rem;
+    }
+    
+
+
+    
 }
 
