--- a/chamber/styles/directoryBase.css
+++ b/chamber/styles/directoryBase.css
@@ -11,7 +11,37 @@ figure {
 .label {
     font-weight: 600;
 }
+
+
+
+/* Basic styling for the sidebar */
+#sidebar {
+    width: 265px;
+    padding: 20px;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    position: fixed;
+    top: 55px;
+    right: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    padding: 2px;
 }
+
+/* *****************************
+Styling for the visit message
+***************************** */
+#visit-message {
+    font-size: 1em;
+    color: #333;
+}
+
+}
+
+
+
+
+
 img {
     max-width: 320px;
 }
@@ -332,7 +362,7 @@ Discover Page
 
 }
 /* Basic styling for the sidebar */
-#sidebar {
+/* #sidebar {
     width: 300px;
     padding: 20px;
     background-color: #f0f0f0;
@@ -343,15 +373,15 @@ Discover Page
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
     padding: 2px;
-}
+} */
 
 /* *****************************
 Styling for the visit message
 ***************************** */
-#visit-message {
+/* #visit-message {
     font-size: 1em;
     color: #333;
-}
+} */
 
 
 
