--- a/iProject/styles/sitePlan.css
+++ b/iProject/styles/sitePlan.css
@@ -6,25 +6,25 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #ceb992;
-  --secondary-color: #a1a688;
-  --accent1-color: #73937e;
-  --accent2-color: #585563;
+  --primary-color: #0157EC;
+  --secondary-color: #EDBC23;
+  --accent1-color: #2F853E;
+  --accent2-color: #DF8FDB;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Galindo";
   --paragraph-font: Texturina, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #73937e;  /* headlines on a white background */ 
+  --headline-color-on-white: #0157EC;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #585563; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: #2F853E; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #585563  ;
+  --paragraph-background-color: #0157EC ;
   --nav-link-color: white;
-  --nav-background-color: #73937e;
-  --nav-hover-link-color: #a1a688;
-  --nav-hover-background-color: #585563;
+  --nav-background-color: #0157EC;
+  --nav-hover-link-color: #DF8FDB;
+  --nav-hover-background-color: #2F853E;
 }
 
 
